plasmaquick/dialog: Call repositionIfOffScreen after setup

Otherwise under wayland, the default placement by kwin will be ignored.

BUG: 480588


(cherry picked from commit ef6b06b871d0a8e9ac2648d60fab960bf011a9bd)